# kube-ReAct

./: .dockerignore  Dockerfile  Dockerfile.ollama  Dockerfile.webapp  Pipfile  README.md  docker-compose-grafana.yaml  docker-compose.yaml  pyproject.toml
app/: app.py
app/config/: app_config.py
app/services/: database_service.py  figure_service.py
helm/kubera/: Chart.yaml  values-prod.yaml
helm/kubera/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
