[project]
name = "kubera"
version = "0.1.0"
description = "Kubernetes Event & Root cause Analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "authlib==1.3.1",
  "dash>=2.18.2",
  "dash-auth==2.3.0",
  "flask==3.0.0",
  "gunicorn==21.2.0",
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "psycopg2-binary>=2.9.10",
  "statsmodels>=0.14.4",
]
